--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:3030/api
+REACT_APP_API_URL=https://delivery-admin-server-kyhw.onrender.com/api
 REACT_APP_APP_NAME=Delivery Admin Panel
